# SelfMenu

./: MenuApp开发日志 20260316.md  MenuApp开发日志 20260316.txt  app_config.py  exceptions.py  main_app.py  readme.py
.github/workflows/: build-apk.yml
controller/: app_init.py
data/: menu_app.db
mobile/: .gitignore  __init__.py  android_main.py  app.py  buildozer.spec  buildozer.txt  main.py  pyproject.toml  readme.md  requirements.txt  test_simple.py
mobile/config/: __init__.py  settings.py
mobile/screens/: __init__.py  category_screen.py  home_screen.py  import_export_screen.py  recipe_detail_screen.py  recipe_form_screen.py  recipe_list_screen.py  search_screen.py
mobile/services/: __init__.py  category_service_mobile.py  recipe_service_mobile.py
mobile/utils/: __init__.py  formatters.py  validators.py
mobile/widgets/: __init__.py  app_bar.py  bottom_nav.py  category_card.py  common_dialogs.py  recipe_card.py
models/: __init__.py  base_model.py  category_model.py  recipe_model.py  share_model.py
old/: main01.py  main02.py
repositories/: __init__.py  base_repository.py  category_repository.py  recipe_repository.py  share_repository.py
services/: category_service.py  recipe_service.py
utils/: __init__.py  category_dialog.py  common_dialogs.py  constant_def.py  database.py  database_migrator.py  dialogs.py  event_bus.py  file_utils.py  log_file.py  recipe_dialog.py  tempfile_1773194355112.py  validators.py
views/: base_view.py  category_view.py  import_export_view.py  main_window_view.py  recipe_view.py  search_view.py  share_view.py
(+3 files in other folders)
